<resources>
    <string name="app_name">The Collector</string>

    <string name="add_category">Add Category</string>
    <string name="add_item">Add Item</string>
    <string name="add_item_in_menu">Add items in the menu</string>
    <string name="cancel">Cancel</string>
    <string name="category_title">Category Title</string>
    <string name="create_new_category">Create New Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="edit_item">Edit Item</string>
    <string name="edit_image_text">Click image to edit</string>
    <string name="delete_category">Delete Category</string>
    <string name="delete_item">Delete Item</string>
    <string name="description">Description:</string>
    <string name="description_optional">Description (optional)</string>
    <string name="long_click_to_edit">Long click to edit item</string>
    <string name="name">Name:</string>
    <string name="no_description">No description available.</string>
    <string name="rating">Rating:</string>
    <string name="save">Save</string>
</resources>
