<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/addItemPhoto"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_image_gray_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/editPhotoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="12sp"
            android:text="@string/edit_image_text"
            app:layout_constraintStart_toStartOf="@id/addItemPhoto"
            app:layout_constraintEnd_toEndOf="@id/addItemPhoto"
            app:layout_constraintTop_toBottomOf="@id/addItemPhoto"
            tools:text="Click image to edit it"/>

    <TextView
            android:id="@+id/addItemNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:text="@string/name"
            app:layout_constraintTop_toTopOf="@id/addItemName"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Name: "/>

    <EditText
            android:id="@+id/addItemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionNext"
            app:layout_constraintStart_toStartOf="@id/addItemDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editPhotoText"
            tools:text="Yosemite T-Shirt"/>

    <TextView
            android:id="@+id/addItemDescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:text="@string/description"
            app:layout_constraintTop_toTopOf="@id/addItemDescription"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Description: "/>

    <EditText
            android:id="@+id/addItemDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:maxLines="6"
            android:inputType="textMultiLine"
            android:imeOptions="actionDone"
            app:layout_constraintStart_toEndOf="@id/addItemDescriptionLabel"
            app:layout_constraintEnd_toEndOf="@id/addItemName"
            app:layout_constraintTop_toBottomOf="@id/addItemName"
            tools:text="This is the shirt I was wearing when I escaped the bear!"/>

    <TextView
            android:id="@+id/addItemRatingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/rating"
            app:layout_constraintStart_toStartOf="@id/addItemDescriptionLabel"
            app:layout_constraintTop_toTopOf="@id/addItemRating"
            tools:text="Rating:"/>

    <RatingBar
            android:id="@+id/addItemRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:stepSize="1"
            android:numStars="5"
            android:rating="3"
            app:layout_constraintTop_toBottomOf="@id/addItemDescription"
            app:layout_constraintStart_toStartOf="@id/addItemDescription"/>

    <TextView
            android:id="@+id/saveItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:textStyle="bold"
            android:text="@string/save"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/mid"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Save" />

    <TextView
            android:id="@+id/cancelItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="16dp"
            android:textStyle="bold"
            android:text="@string/cancel"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/mid"
            tools:text="Cancel" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5"/>

</androidx.constraintlayout.widget.ConstraintLayout>